--- a/BaseProj/BaseProj.vcxproj
+++ b/BaseProj/BaseProj.vcxproj
@@ -77,6 +77,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AdditionalHeaderFile.h" />
     <ClInclude Include="BaseProj.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
