--- a/BaseProj/BaseProj.vcxproj.filters
+++ b/BaseProj/BaseProj.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="BaseProj.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AdditionalHeaderFile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
